...
                                <color key="textColor" red="0.0" green="0.38743984529999997" blue="0.80324519230000002" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="highlightedColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o6y-0G-KB9">
                                <rect key="frame" x="138" y="507" width="97" height="39"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Old Party">
                                    <color key="titleColor" red="0.0" green="0.38743984529999997" blue="0.80324519230000002" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="oldPartySegue:" destination="Gft-ba-Ubb" eventType="touchUpInside" id="PqK-Qv-O4m"/>
                                    <segue destination="POT-d1-Ebg" kind="showDetail" identifier="OldPartySegue" action="showViewController:sender:" id="YdP-Ke-baA"/>
                                </connections>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G3h-cR-a7C">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Review" id="vAq-Sr-0Xo">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Rg9-mA-sTi">
                                            <color key="tintColor" red="0.0" green="0.38743984529999997" blue="0.80324519230000002" alpha="1" colorSpace="calibratedRGB"/>
                                            <connections>
                                                <segue destination="hr1-tK-wjW" kind="unwind" unwindAction="backToOldParty:" id="eyV-bp-cV0"/>
                                            </connections>
                                        </barButtonItem>
...
